--- a/css/style.css
+++ b/css/style.css
@@ -58,111 +58,135 @@ p{
 
 .nav-item a:active{
     color: rgb(0, 0, 0);
-    text-shadow: 2px 4px 5px rgb(255, 255, 255);
+    text-shadow: 2px 4px 5px rebeccapurple;
 }
 
+.degradesushi {
+    background: linear-gradient(to right, #F8E2D7, #B39BC4);
+}  
 
+
+button {
+    background-color: #e49e07; 
+    border: none; 
+    color: rgb(255, 255, 255); 
+    padding: 12px 24px; 
+    text-align: center; 
+    text-decoration: none; 
+    display: inline-block;
+    font-size: 16px; 
+    margin: 4px 2px; 
+    cursor: pointer; 
+    border-radius: 8px; 
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25); 
+} 
 
 
 /*PAGINA DESTACADOS USANDO GRIDS*/
-.fondomaindest{    
-    background-color: rgb(254, 187, 187);
-}
 
-.cards-container {
+.container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: auto;
-    
-}  
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, auto);
+    grid-gap: 1rem;
+}
   
-.card {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+.grid-container {
+    background-color: #f1f1f1;
     display: grid;
-    grid-template-rows: auto 1fr auto;
-    border-radius: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-areas: 
+      "titulo titulo titulo imagen imagen imagen"
+      "titulo titulo titulo imagen imagen imagen"
+      "titulo titulo titulo imagen imagen imagen"
+      "uno uno dos dos tres tres"
+      "uno uno dos dos tres tres";
+    gap: 1rem;
+}
+  
+.titulo-main {
+    grid-area: titulo;
+}
+  
+.image-main {
+    grid-area: imagen;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    max-height: 500px;
     overflow: hidden;
-}  
-
-.card-1 {
-    background-color: #FF1493;
-    text-align: center;
-    }
-.card-2 {
-    background-color: #00FFFF;
-    text-align: center;
-    }
-.card-3 {
-    background-color: #66FF00;
-    text-align: center;
-    }
-.card-4 {
-    background-color: #FF9933;
-    text-align: center;
-    }
-.card-5 {
-    background-color: #FFFF00;
-    text-align: center;
-    }
-.card-6 {
-    background-color: #FFD700;
-    text-align: center;
-    }
-.card-7 {
-    background-color: #00CED1;
-    text-align: center;
-    }
-.card-8 {
-    background-color: #00FFFF;
-    text-align: center;
-    }
-.card-9 {
-    background-color: #FF00CC;
-    text-align: center;
-    }
-
-@media (min-width: 1441px) and (max-width: 1920px) { /* Pongo un maximo asi no se me rompe */
-    .cards-container {
-        max-width: 1200px;
-        margin: 0 auto;
-    }
-}
-
-@media (max-width: 1440px) {
-    .cards-container {
-        grid-template-columns: repeat(3, 1fr);
-        justify-items: center;
-    }
-}
-
-@media (max-width: 1024px) {
-    .cards-container {
-        grid-template-columns: repeat(2, 1fr);
-        justify-items: center;
-    }
 }
   
-@media (max-width: 768px) { 
-    .cards-container {
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap: 15px;
-        justify-items: center;
+.image-main img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
+
+
+
+
+@media screen and (max-width: 1024px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(12, 1fr);
+        grid-template-areas: 
+            "titulo titulo titulo imagen imagen imagen"
+            "titulo titulo titulo imagen imagen imagen"
+            "titulo titulo titulo imagen imagen imagen"
+    }
+    .titulo-main {    
+        margin-top: 2rem;    
+        text-align: left;
     }
 }
 
-@media (max-width: 425px) { 
-    .cards-container {
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap: 15px;
-        justify-items: center;
+
+@media screen and (max-width: 768px) {
+    .grid-container {
+        grid-template-rows: auto;
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "titulo"
+            "imagen"
+            ;
+    }  
+    .titulo-main {
+        margin-top: 0rem;
+        text-align: center;
     }
-}  
-@media (max-width: 320px) { 
-    .cards-container {
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap: 10px;
-        justify-items: center;
+  
+    .image-main {
+        max-height: 300px;
     }
 }
+
+
+@media screen and (max-width: 425px) {
+    .grid-container {
+        grid-template-rows: auto;
+        grid-template-columns: 1fr;
+        grid-template-areas:
+        "titulo"
+        "imagen"
+        ;
+    }
+    .titulo-main {
+        font-size: 2rem;
+    }
+}
+
+
+@media screen and (max-width: 320px) {
+    .titulo-main {
+    font-size: 1.5rem;
+}
+  
+    .btn-primary {
+        font-size: 1rem;
+    }
+}
+
