--- a/css/style.css
+++ b/css/style.css
@@ -375,7 +375,7 @@ button {
     ". nosotros nosotros nosotros ."
     "verde verde verde verde verde"
     ". frase huevo huevo huevo"
-    "fin fin fin team team"
+    "fin fin fin team ."
     ;
     background-color: rgb(253, 253, 253);
     gap: 1rem;
@@ -460,12 +460,12 @@ button {
     height: auto;
 }
 
-@media (max-width: 425px){
+@media (max-width: 1024px){
     .grid-dest{
         display: grid;
         max-width: 100%;
         height: auto;
-        grid-template-columns: 425px;
+        grid-template-columns: auto;
         grid-template-rows: auto auto auto auto auto auto;
         grid-template-areas: 
         "nosotros"
@@ -552,7 +552,7 @@ button {
         display: grid;
         max-width: 100%;
         height: auto;
-        grid-template-columns: 375px;
+        grid-template-columns: auto;
         grid-template-rows: auto auto auto auto auto auto;
         grid-template-areas: 
         "nosotros"
