--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,29 @@ button:hover {
   border: none;
 }
 
+.cards-container {
+  perspective: 1000px;
+}
+
+.card {
+  transition: transform 0.3s;
+  z-index: 1;
+}
+.card:hover {
+  transform: scale(1);
+  z-index: 2;
+}
+
+.cards-container:hover .card:not(:hover) {
+  transform: scale(0.95);
+  z-index: 0;
+}
+
+.fondocard {
+  width: 15rem;
+  height: 24rem;
+}
+
 header nav {
   background-color: #959595;
 }
