--- a/sass/components/_boostrap.scss
+++ b/sass/components/_boostrap.scss
@@ -13,3 +13,26 @@
 	border: none;
 }  
 
+.cards-container {
+	perspective: 1000px;
+}  
+
+.card {
+	transition: transform 0.3s;
+	z-index: 1;
+
+	&:hover {
+	    transform: scale(1);
+	    z-index: 2;
+}
+}  
+.cards-container:hover .card:not(:hover) {
+	transform: scale(0.95);
+	z-index: 0;
+}
+
+
+.fondocard {
+	width: 15rem;
+	height: 24rem;
+}
