--- a/sass/layouts/_main-destacados-media768.scss
+++ b/sass/layouts/_main-destacados-media768.scss
@@ -1,5 +1,6 @@
 @media (max-width: 768px){
     .grid-container{
+        @include grid (center, center);
         display: grid;        
         height: 155rem;
         grid-template-columns: 1fr;
@@ -17,17 +18,11 @@
     .titulo-main{
         grid-area: titulo;
         display: flex;
-        flex-direction: column;
-        text-align: center;
-        margin-top: 0rem;        
-        align-self: flex-end; 
     }
 
     .image-main{
         grid-area: portada;
-        display: grid;
-        justify-self: center;
-        align-self: start;    
+        display: grid;   
     }
     .image-main img{
         border-radius: 1rem;
@@ -40,8 +35,6 @@
     .image-maindos{        
         grid-area: imgdos;
         display: grid;        
-        justify-self: center;
-        align-self: top;
     }  
     .image-maindos img{
         border-radius: 1rem;
@@ -67,19 +60,13 @@
         grid-area: carduno;
         display: grid;
         height: auto;
-        justify-self: center;
-        align-self: center;
     }
     .carduno-main h5{
         margin-top: 1rem;
-        text-align: center;
-        justify-self: center;
-        align-self: center;
     }
     .carduno-main p{
-        text-align: center;
-        justify-self: center;
-        align-self: center;
+
+        margin-top: 1rem;
     }
 
     .cardtres-main{
